Skip to content

Issue with Play/Pause on KDE/Plasma

In some conditions, Plasma does not recognize VLC as playing a track. This has the effect of disabling play/pause with media buttons or the plasma media player widget in status bar. Next and previous track seems unaffected.

From what I can tell, when I start VLC and play some songs (from a playlist) everything works fine. After I pause VLC once (with media either within VLC interface, or media button, or plasma media player widget), I can still pause/unpause with media button but as soon as the track changes, Plasma thinks VLC is not playing and I cannot pause with media button or plasma widget anymore.

To reformulate: playing status in Plasma is "stopped" (not even "paused") whenever the track is changed after the player has been paused at least once. If VLC has never been paused since its start, the status is correct even after track change.

From my tests, the issue does not seem to be correlated with how VLC is paused/unpaused (from media button or from within the interface) or how the track is changed (end of track, next track within the interface or next track button).

Possibly related (but subtly different):

Edited by Marvin Scholz
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information