control: dbus: emit events properly on input change

The can-seek and can-pause variables could end up
not being set, as the callback events are not reliably
fired in case the variables changed before the callbacks
are attached.
Additionally we need to report the playback status properly
whenever a new item starts playing.

Fix #24699